--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,9 @@ android {
     dexOptions {
         javaMaxHeapSize "2048M"
     }
+    testOptions {
+        unitTests.returnDefaultValues = true;
+    }
 }
 
 dependencies {
@@ -32,6 +35,9 @@ dependencies {
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
-    compile 'com.google.android.gms:play-services:9.2.1'
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1' //OkHttp
+    compile 'io.reactivex:rxjava:1.1.6' //RxJava
+    compile 'io.reactivex:rxandroid:1.2.1' //RxAndroid
+
 }
