--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,13 +21,12 @@ apply plugin: 'me.tatarka.retrolambda'
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.1"
-
     defaultConfig {
         applicationId "com.sean.nanastudio.taoyuanstreetparking"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 3
-        versionName "1.11"
+        versionCode 4
+        versionName '1.2'
 
         multiDexEnabled true
     }
@@ -43,12 +42,12 @@ android {
     testOptions {
         unitTests.returnDefaultValues = true;
     }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    productFlavors {
+    }
 }
 
 dependencies {
