--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.sean.nanastudio.taoyuanstreetparking">
 
 
@@ -15,18 +16,16 @@
         android:theme="@style/AppTheme"
         android:fullBackupContent="@xml/backupscheme">
         <activity android:name=".MainActivity">
-            <intent-filter>
+            <intent-filter tools:ignore="GoogleAppIndexingWarning">
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
-                <data
-                    android:scheme="@string/app_name"
-                    android:host="taoyuanstreetparking.nanastudio.sean.com" />
-
-
+                <!--<data-->
+                <!--android:scheme="@string/app_name"-->
+                <!--android:host="taoyuanstreetparking.nanastudio.sean.com" />-->
             </intent-filter>
         </activity>
     </application>
 
 </manifest>
+
