--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "com.sean.nanastudio.taoyuanstreetparking"
         minSdkVersion 16
         targetSdkVersion 24
-        versionCode 6
-        versionName '2.1'
+        versionCode 7
+        versionName '2.11'
 
         multiDexEnabled true
     }
@@ -59,6 +59,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.google.android.gms:play-services:9.4.0'
+    compile 'com.android.support:multidex:1.0.1'
     //okHttp
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
     //RxJava
