--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 // Required because retrolambda is on maven central
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 apply plugin: 'com.android.application' //or apply plugin: 'java'
@@ -54,10 +55,10 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.0.90-beta'
-    compile 'com.android.support:appcompat-v7:24.1.1'
-    compile 'com.android.support:design:24.1.1'
-    compile 'com.android.support:recyclerview-v7:24.1.1'
-    compile 'com.android.support:cardview-v7:24.1.1'
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:design:24.2.0'
+    compile 'com.android.support:recyclerview-v7:24.2.0'
+    compile 'com.android.support:cardview-v7:24.2.0'
     compile 'com.google.android.gms:play-services:9.4.0'
     compile 'com.android.support:multidex:1.0.1'
     //okHttp
@@ -66,6 +67,8 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     //RxAndroid
     compile 'io.reactivex:rxandroid:1.2.1'
+    //RxPermission
+    compile 'com.tbruyelle.rxpermissions:rxpermissions:0.7.0@aar'
     //RxBinding
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
     compile 'com.jakewharton.rxbinding:rxbinding-recyclerview-v7:0.4.0'
